# Crunchyroll-Anilist-Sync

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLAUDE.md
scrapers/: __init__.py  base_scraper.py  cloudflare_handler.py  crunchyroll_auth.py  crunchyroll_scraper.py  driver_manager.py  flaresolverr_client.py
src/: __init__.py  anilist_api.py  anilist_auth.py  anilist_client.py  anime_matcher.py  auth_cache.py  cache_manager.py  crunchyroll_auth.py  crunchyroll_parser.py  crunchyroll_scraper.py  debug_collector.py  flaresolvrrr_client.py  history_parser.py  scraper.py  sync_manager.py
